<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
            android:id="@+id/lista_alunos_context_remover_id"
            android:title="@string/lista_alunos_context_remover"/>
    <item
            android:id="@+id/lista_alunos_context_sms_id"
            android:title="@string/lista_alunos_context_sms"/>
    <item
            android:id="@+id/lista_alunos_context_ligar_id"
            android:title="@string/lista_alunos_context_ligar"/>
    <item
            android:id="@+id/lista_alunos_context_site_id"
            android:title="@string/lista_alunos_context_site"/>
    <item
            android:id="@+id/lista_alunos_context_mapa_id"
            android:title="@string/lista_alunos_context_mapa"/>
    <item
            android:id="@+id/lista_alunos_context_email_id"
            android:title="@string/lista_alunos_context_email"/>
    <item
            android:id="@+id/lista_alunos_context_compartilhar_id"
            android:title="@string/lista_alunos_context_compartilhar"/>

</menu>