<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:layout_margin="20dp"
        >
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/ca_img"
            android:paddingBottom="20dp"
            />
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_aluno_nome_label"
            android:id="@+id/textView"
            />

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/cadastro_aluno_nome_hint"
            android:id="@+id/ca_nome"
            android:paddingBottom="20dp"
            />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_aluno_telefone_label"
            android:id="@+id/textView1" android:layout_gravity="left|center_vertical"
            />

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_aluno_telefone_hint"
            android:text=""
            android:id="@+id/ca_telefone"
            android:paddingBottom="20dp"
            />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_aluno_nota_label"
            android:id="@+id/textView2" android:layout_gravity="left|center_vertical"
            />

    <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ca_seek_nota"
            android:paddingBottom="20dp"
            />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ZERO"
            android:id="@+id/seek_progress" android:layout_gravity="center"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_aluno_salvar_label"
            android:id="@+id/ca_btn_salvar"/>
</LinearLayout>

